--- a/style.css
+++ b/style.css
@@ -1,39 +1,56 @@
-body {
-    font-family: 'IBM Plex Mono', monospace;
-    margin: 0%;
-}
-
-section {
-    display: flex;
-    margin-bottom: 100px;
-}
-
-.half-width {
-    width: 50%;
-    padding-left: 5%;
-}
-
-.half-width img {
-    width: 70%;
-    padding-top: 40px;
-}
-
-.link-button {
-    text-decoration: none;
-    background-image: radial-gradient(red, orange);
-    padding: 10px 20px;
-    border-radius: 10px;
-    color: greenyellow;
-    font-weight: 700px;
-}
-
-.top-banner {
-    background-image: url(./top-banner.png);
-    background-repeat: no-repeat;
-}
-
-.dream-big {
-    background-image: url(./dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
-}
+    body {
+        font-family: 'IBM Plex Mono', monospace;
+        margin: 0%;
+    }
+    
+    .flexible-container {
+        display: flex;
+        margin-bottom: 100px;
+    }
+    
+    .half-width {
+        width: 50%;
+        padding-left: 5%;
+    }
+    
+    .half-width img {
+        width: 70%;
+        padding-top: 40px;
+    }
+    
+    .link-button {
+        text-decoration: none;
+        background-image: radial-gradient(red, orange);
+        padding: 10px 20px;
+        border-radius: 10px;
+        color: greenyellow;
+        font-weight: 700px;
+    }
+    
+    .top-banner {
+        background-image: url(./top-banner.png);
+        background-repeat: no-repeat;
+    }
+    
+    .dream-big {
+        background-image: url(./dream-bg.png);
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    
+    .half-width-box {
+        width: 40%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-left: 40px;
+        padding-right: 20px;
+        box-shadow: 10px 10px 40px rgb(20, 18, 18);
+        border-radius: 10px;
+        border-left: 5px solid;
+    }
+    
+    .experince-area {
+        background-image: url(./exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    }
